Fix nav on small screens

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -208,7 +208,13 @@ hr.normal {
 	.choose-wallet h3 {
     font-size: 28px;
 }
+
+	.navbar-header .navbar-brand {
+    margin: 0 0 0 15px;
 }
+
+}
+
 
 @media (max-width: 992px) {
   .col-md-4 {
